updated code based on reviews 28/8/20